media/qbitorrent/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
spec:
  serviceName: qbittorrent
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        workload: download
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:qbittorrent
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: downloads
        persistentVolumeClaim:
          claimName: qbittorrent
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent:version-14.3.8.99202110120741-7429-1bae770b2ubuntu20.04.1
        # image: alpine
        # command: ["sleep"]
        # args: ["10000000"]
        volumeMounts:
        - name: config
          subPath: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads/qbittorrent
        ports:
        - containerPort: 8080
          name: qbt-webui
        - containerPort: 39910 
          name: qbt-bt-tcp
          protocol: TCP
        - containerPort: 39910 
          name: qbt-bt-udp
          protocol: UDP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
