media/qbitorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tcp
  namespace: media
  annotations:
    metallb.universe.tf/allow-shared-ip: "qbittorrent"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.222.232
  externalTrafficPolicy: Local
  selector:
    app: qbittorrent
  ports:
  - name: qbittorrent
    port: 8080
  - name: qbittorrent-bt
    port: 25060
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-udp
  namespace: media
  annotations:
    metallb.universe.tf/allow-shared-ip: "qbittorrent"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.222.232
  externalTrafficPolicy: Local
  selector:
    app: qbittorrent
  ports:
  - name: qbittorrent-bt
    port: 25060
    protocol: UDP
