media/qbitorrent/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: qbittorrent-ui
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  ingress:
  - ports:
    - port: 8080
    from: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: qbittorrent-bt
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  ingress:
  - ports:
    - port: 25060
      protocol: TCP
    - port: 25060
      protocol: UDP
    from: []
